syntax = "proto3";

package greet;
option go_package="/greetpb";

//message 
message Greeting {
    string first_name=1;
    string last_name=2;
}

//request
message GreetRequest {
    Greeting greeting=1;
}

//response
message GreetResponse {
    string result=1;
}

//manyTimesRequest
message GreetManyTimesRequest {
    Greeting greeting=1;
}

//manyTimesResponse
message GreetManyTimesResponse {
    string result=1;
}

//rpc service 
service GreetService{
    //unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};
    //server streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
}